delete student from stream
